--- a/src/index.html
+++ b/src/index.html
@@ -236,9 +236,9 @@
             </div>
         </footer>
     </div>
-<script src="/js/jquery.min.js"></script>
-<script src="/js/tether.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/tether.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
 <script type="text/javascript">
     function scrollNav() {
         $('.side-bar li a').click(function(){
